first page edit

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@ $ git checkout gh-pages
 
 <h3>Authors and Contributors</h3>
 
+<div style="text-align:center; width:757px; margin-left:auto; margin-right:auto;">
+<img id="Image-Maps_1201305010651132" src="https://raw.github.com/morsag/ACROSS_Optitrack/master/Wiki/Menu.png" usemap="#Image-Maps_1201305010651132" border="0" width="757" height="635" alt="" />
+<map id="_Image-Maps_1201305010651132" name="Image-Maps_1201305010651132">
+<area shape="poly" coords="23,24,28,288,199,296,231,212,301,158,350,143,351,75,351,21,236,21,106,21,79,21,23,136,108,298," href="http://www.image-maps.com/" alt="" title=""   />
+<area shape="poly" coords="384,17,383,137,471,168,533,241,553,290,733,296,726,205,737,101,730,22,609,20,494,28," href="http://www.image-maps.com/" alt="" title=""   />
+<area shape="rect" coords="755,633,757,635" href="http://www.image-maps.com/index.php?aff=mapped_users_1201305010651132" alt="Image Map" title="Image Map" />
+</map>
+<!-- Image map text links - Start - If you do not wish to have text links under your image map, you can move or delete this DIV -->
+<div style="text-align:center; font-size:12px; font-family:verdana; margin-left:auto; margin-right:auto; width:757px;">
+</div>
+
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
 
 <h3>Support or Contact</h3>
