--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Across optitrack</h1>
-        <h2>ROS node for accessing optitrack data using NatNet protocol</h2>
+        <h2>Project aimed to provide software and hardware support for Optitrack based video motion capture system</h2>
         <a href="https://github.com/morsag/ACROSS_Optitrack" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -28,36 +28,20 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>Welcome to GitHub Pages.</h3>
+          <h3>Welcome to ACROSS Optitrack GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
+<p>This project aims to explain, in detail, how to use Optical Motion Capture Systems and Tracking Software (Optitrack) in a Laboratory network setup with multiple PC clients. The project covers the basics from setting up the Motion Tracking Hardware and Software, to the actual implementation of a ROS (Robot Operating System) based client application.</p>
 
 <div style="text-align:center; width:757px; margin-left:auto; margin-right:auto;">
-<img id="Image-Maps_1201305010651132" src="https://raw.github.com/morsag/ACROSS_Optitrack/master/Wiki/Menu.png" usemap="#Image-Maps_1201305010651132" border="0" width="757" height="635" alt="" />
-<map id="_Image-Maps_1201305010651132" name="Image-Maps_1201305010651132">
-<area shape="poly" coords="23,24,28,288,199,296,231,212,301,158,350,143,351,75,351,21,236,21,106,21,79,21,23,136,108,298," href="http://www.image-maps.com/" alt="" title=""   />
-<area shape="poly" coords="384,17,383,137,471,168,533,241,553,290,733,296,726,205,737,101,730,22,609,20,494,28," href="http://www.image-maps.com/" alt="" title=""   />
-<area shape="rect" coords="755,633,757,635" href="http://www.image-maps.com/index.php?aff=mapped_users_1201305010651132" alt="Image Map" title="Image Map" />
+<img id="Image-Maps_4201305011043239" src="https://raw.github.com/morsag/ACROSS_Optitrack/master/Wiki/Menu.png" usemap="#Image-Maps_4201305011043239" border="0" width="757" height="635" alt="" />
+<map id="_Image-Maps_4201305011043239" name="Image-Maps_4201305011043239">
+<area shape="poly" coords="20,24,352,20,352,145,250,180,199,293,25,294," href="http://www.image-maps.com/" alt="" title=""   />
+<area shape="poly" coords="384,19,383,139,507,186,555,291,728,293,730,24," href="https://github.com/morsag/ACROSS_Optitrack/wiki/ROS-setup" alt="" title="ROSSetup"   />
+<area shape="poly" coords="553,347,725,349,720,612,382,616,386,501,498,453," href="https://github.com/morsag/ACROSS_Optitrack/wiki/Optitrack-Settings" alt="" title="OptitrackSettings"   />
 </map>
-<!-- Image map text links - Start - If you do not wish to have text links under your image map, you can move or delete this DIV -->
-<div style="text-align:center; font-size:12px; font-family:verdana; margin-left:auto; margin-right:auto; width:757px;">
+
+<!-- Image map text links - End - -->
+
 </div>
 
 <p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
