Added tracking tools link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div style="text-align:center; width:757px; margin-left:auto; margin-right:auto;">
 <img id="Image-Maps_4201305011043239" src="https://raw.github.com/morsag/ACROSS_Optitrack/wiki/Wiki/Menu.png" usemap="#Image-Maps_4201305011043239" border="0" width="757" height="635" alt="" />
 <map id="_Image-Maps_4201305011043239" name="Image-Maps_4201305011043239">
-<area shape="poly" coords="20,24,352,20,352,145,250,180,199,293,25,294," href="http://www.image-maps.com/" alt="" title=""   />
+<area shape="poly" coords="20,24,352,20,352,145,250,180,199,293,25,294," href="https://github.com/morsag/ACROSS_Optitrack/wiki/Tracking-Tools-Calibration-procedure" alt="" title=""   />
 <area shape="poly" coords="384,19,383,139,507,186,555,291,728,293,730,24," href="https://github.com/morsag/ACROSS_Optitrack/wiki/ROS-setup" alt="" title="ROSSetup"   />
 <area shape="poly" coords="553,347,725,349,720,612,382,616,386,501,498,453," href="https://github.com/morsag/ACROSS_Optitrack/wiki/Optitrack-Settings" alt="" title="OptitrackSettings"   />
 </map>
